--- a/style.css
+++ b/style.css
@@ -60,9 +60,9 @@ p {
     line-height: 1.6;
 }
 
-nav ul li a:hover {
+/* nav ul li a:hover {
     color: #d8e2dc;
-}
+} */
 
 section {
     border: 1px solid #d8e2dc;
