--- a/style.css
+++ b/style.css
@@ -65,3 +65,17 @@ nav ul li a:hover {
     color: #d8e2dc;
 }
 
+.side-gif {
+    width: 100px;
+    float: right;
+    margin-left: 20px;
+}
+
+@media (max-width: 600px) {
+    .side-gif {
+        float: none;
+        display: block;
+        margin: 10px auto;
+        width: 80px;
+    }
+}
