--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ header {
     color: #f7f7f7;
     padding: 1.5em;
     text-align: center;
-    border-bottom: 2px solid #7b9b5e;
+    border-bottom: none;
     box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.2);
 }
 
