--- a/projects.css
+++ b/projects.css
@@ -1,8 +1,9 @@
-#projects {
+/* #projects {
     padding: 2em 0;
     margin: 1em auto;
     max-width: 800px;
-}
+    width: 100%;
+} */
 
 .project {
     background-color: #fff;
@@ -17,7 +18,7 @@
 .project-header {
     display: flex;
     justify-content: space-between;
-    align-items: baseline; /* Aligns date with the title */
+    align-items: baseline;
     margin-bottom: 0.5em;
 }
 
