--- a/experience.css
+++ b/experience.css
@@ -40,14 +40,14 @@
     color: #4a4a4a;
 }
 
-.project p:last-of-type {
+.experience p:last-of-type {
     margin-top: 1em;
     font-size: 0.95em;
     color: #555;
     line-height: 1.6;
 }
 
-.project:hover {
+.experience:hover {
     transform: scale(1.02);
     transition: transform 0.3s ease;
 }
