--- a/experience.css
+++ b/experience.css
@@ -16,9 +16,9 @@
 }
 
 .experience h3 {
-    font-size: 1.3em;
+    font-size: 1em;
     font-weight: 600;
-    color: #6d8e3e;
+    color: #5a5a5a;
     margin: 0;
 }
 
