--- a/projects.css
+++ b/projects.css
@@ -1,10 +1,3 @@
-/* #projects {
-    padding: 2em 0;
-    margin: 1em auto;
-    max-width: 800px;
-    width: 100%;
-} */
-
 .project {
     background-color: #fff;
     border: 1px solid #d8e2dc;
@@ -23,9 +16,9 @@
 }
 
 .project h3 {
-    font-size: 1.3em;
+    font-size: 1em;
     font-weight: 600;
-    color: #6d8e3e;
+    color: #5a5a5a;
     margin: 0;
 }
 
