--- a/projects.css
+++ b/projects.css
@@ -16,9 +16,9 @@
 }
 
 .project h3 {
-    font-size: 1em;
+    font-size: 1.1em;
     font-weight: 600;
-    color: #5a5a5a;
+    color: #4a4a4a;
     margin: 0;
 }
 
@@ -33,6 +33,7 @@
     font-size: 1em;
     line-height: 1.5;
     margin-bottom: 0.5em;
+    color: #6d6d6d;
 }
 
 .project p strong {
