--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ nav ul li a:hover {
     }
 }
 
-.about-picture {
+/* .about-picture {
     width: 150px;
     height: auto;
     border-radius: 50%; 
@@ -90,4 +90,4 @@ nav ul li a:hover {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
     display: block;
     margin: 1em auto; 
-}
+} */
