--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ nav ul li a {
     transition: color 0.3s ease;
 }
 
-section {
+/* section {
     padding: 2em;
     background-color: #fff;
     margin: 1em auto;
@@ -41,7 +41,7 @@ section {
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     border: 1px solid #d8e2dc;
-}
+} */
 
 footer {
     background-color: #88b04b;
