--- a/style.css
+++ b/style.css
@@ -33,15 +33,15 @@ nav ul li a {
     transition: color 0.3s ease;
 }
 
-/* section {
+section {
     padding: 2em;
     background-color: #fff;
     margin: 1em auto;
     max-width: 800px;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    border: 1px solid #d8e2dc;
-} */
+    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); */
+    /* border: 1px solid #d8e2dc; */
+}
 
 footer {
     background-color: #88b04b;
