--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ nav ul li a:hover {
 
 #experience, #projects {
     background-color: transparent;
+    border: none;
     box-shadow: none;
     padding: 2em 0;
 }
