--- a/experience.css
+++ b/experience.css
@@ -1,9 +1,9 @@
 .experience {
     background-color: #fff;
     border: 1px solid #d8e2dc;
-    border-radius: 10px;
+    /* border-radius: 10px; */
     padding: 1.5em;
-    margin: 0 auto;
+    margin: 1em auto;
     max-width: 800px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
