--- a/experience.css
+++ b/experience.css
@@ -1,7 +1,7 @@
 .experience {
     background-color: #fff;
     border: 1px solid #d8e2dc;
-    /* border-radius: 10px; */
+    border-radius: 10px;
     padding: 1.5em;
     margin: 1em auto;
     max-width: 800px;
