--- a/projects.css
+++ b/projects.css
@@ -1,7 +1,7 @@
 .project {
     background-color: #fff;
     border: 1px solid #d8e2dc;
-    /* border-radius: 10px; */
+    border-radius: 10px;
     padding: 2em;
     margin: 1em auto;
     max-width: 800px;
