--- a/hobbies.css
+++ b/hobbies.css
@@ -26,14 +26,11 @@
     width: 100%;
     height: 100%;
     position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 1em;
+    transition: transform 0.6s ease;
+    transform-style: preserve-3d;
 }
 
-.flipped .card-content {
+.hobby-card.flipped .card-content {
     transform: rotateY(180deg);
 }
 
