--- a/hobbies.css
+++ b/hobbies.css
@@ -30,8 +30,7 @@
 }
 
 .hobby-card.flipped .card-content {
-    transform: rotateY(180deg); /* Flip the card on the Y-axis */
-}
+    transform: rotateY(180deg);
 
 .front, .back {
     position: absolute;
@@ -44,10 +43,10 @@
 
 .front {
     background-color: #88b04b;
+    padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0;
 }
 
 .back {
@@ -65,16 +64,15 @@
 .image-slideshow {
     position: relative;
     width: 100%;
-    height: 100%; /* Make the slideshow fill the entire card */
+    height: 100%; 
     overflow: hidden;
 }
 
 .image-slideshow img {
     position: absolute;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;  /* Ensures the image covers the whole card */
-    object-position: center;
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover;  
     opacity: 0;
     animation: slideshow 9s infinite ease-in-out;
     transition: opacity 1s ease-in-out;
