--- a/hobbies.css
+++ b/hobbies.css
@@ -6,8 +6,8 @@
 
 .hobby-card {
     display: inline-block;
-    width: 100%;  /* Change this to 100% to ensure full-width card */
-    max-width: 300px;  /* Limit the width to 300px */
+    width: 100%;  
+    max-width: 300px;  
     height: 400px; 
     perspective: 1000px;
     margin: 1.5em;
@@ -31,7 +31,7 @@
 }
 
 .hobby-card.flipped .card-content {
-    transform: rotateY(180deg); /* Flip the card on the Y-axis */
+    transform: rotateY(180deg);
 }
 
 .front, .back {
@@ -60,22 +60,22 @@
     text-align: center;
     font-size: 1.1em;
     line-height: 1.6;
-    transform: rotateY(180deg); /* Make sure the back is rotated */
+    transform: rotateY(180deg);
 }
 
 .image-slideshow {
     position: relative;
     width: 100%; 
-    height: 100%; /* Ensure the slideshow takes up the entire card height */
+    height: 100%; 
     overflow: hidden;
-    display: flex; /* Ensure the images are contained within a flex container */
+    display: flex; 
 }
 
 .image-slideshow img {
     position: absolute;
-    width: 100%; /* Make the image fill the width */
-    height: 100%; /* Make the image fill the height */
-    object-fit: cover;  /* Ensures the image covers the whole card without distortion */
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover;  
     opacity: 0;
     animation: slideshow 9s infinite ease-in-out;
     transition: opacity 1s ease-in-out;
