--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ section {
     border: 1px solid #d8e2dc;
 }
 
-footer {
+/* footer {
     background-color: #88b04b;
     color: #fff;
     text-align: center;
@@ -52,7 +52,7 @@ footer {
     bottom: 0;
     width: 100%;
     border-top: 2px solid #6d8e3e;
-}
+} */
 
 h1, h2 {
     color: #6d8e3e;
