--- a/contact.css
+++ b/contact.css
@@ -71,10 +71,10 @@
     transform: scale(1.1); 
 }
 
-.contact a i {
+/* .contact a i {
     background-color: #f0f4ef;
     border-radius: 50%;
     padding: 0.5em;
     color: #6d8e3e;
-}
+} */
 
