--- a/bullets.css
+++ b/bullets.css
@@ -1,4 +1,4 @@
-.custom-bullet {
+/* .custom-bullet {
     list-style: none; 
     padding-left: 1.5em;
     position: relative;
@@ -10,4 +10,4 @@
     left: 0;
     color: #052912; 
     font-size: 1.2em;
-}
+} */
