--- a/src/landing.css
+++ b/src/landing.css
@@ -27,6 +27,7 @@ body
     justify-content: flex-start;
     min-height: 90vh;
     padding-top: 150px;
+    /* animation: fadeIn 0.5 ease-in; */
 }
 
 .landing img {
@@ -57,14 +58,29 @@ h2
     font-weight: normal;
 }
 
-button
-{
+button {
     background: #f0f0f0;
     border: 1px solid #ccc;
-    padding: 10px 20px;
+    border-radius: 10px;
+    padding: 15px 30px;
     margin-top: 80px;
     cursor: pointer;
     font-family: 'Myfont', sans-serif;
+    font-size: 1.5rem;
+    transition: transform 0.2s ease, background-color 0.2s ease;
+}
+
+button:hover {
+    background: #e6e6e6;
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
 }
 
 @keyframes fadeIn {
@@ -76,4 +92,32 @@ button
     {
         opacity: 1;
     }
+}
+
+.fade-out {
+    animation: fadeOut 0.5s ease-out;
+    opacity: 0;
+}
+
+.nav {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    top: 40px;
+    width: 100%
+    /* right: 20px; */
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+    padding: 0;
+    margin: 0;
+}
+
+nav li {
+    cursor: pointer;
+    font-size: 1.5rem;
+    text-transform: uppercase;
 }
