--- a/src/landing.css
+++ b/src/landing.css
@@ -62,7 +62,7 @@ button {
     background: #f0f0f0;
     border: 1px solid #ccc;
     border-radius: 10px;
-    padding: 15px 30px;
+    padding: 12px 30px;
     margin-top: 80px;
     cursor: pointer;
     font-family: 'Myfont', sans-serif;
@@ -120,4 +120,12 @@ nav li {
     cursor: pointer;
     font-size: 1.5rem;
     text-transform: uppercase;
+}
+
+.additional-text {
+    margin-top: 50px;
+    font-size: 1.7rem;
+    line-height: 1.5;
+    color: #333;
+    animation: fadeIn 1.5s ease-in-out;
 }
